--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     url: jdbc:mysql://localhost:3306/wiki
     username: root
     password: 12as!@AS
+  jpa:
+    hibernate:
+      ddl-auto: update
+
